[project]
name = "automl-with-agents"
version = "0.1.0"
description = "Let coding agents optimize performance on your task automatically"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "numpy",
    "scikit-learn",
    "xgboost",
    "torch",
    "transformers",
    "python-dotenv",
    "tqdm",
    "matplotlib",
    "tiktoken>=0.12.0",
    "wandb>=0.25.1",
    "aiohttp>=3.13.5",
    "pillow>=12.2.0",
]
